--- a/src/assets/scss/paper-kit/_misc.scss
+++ b/src/assets/scss/paper-kit/_misc.scss
@@ -3,7 +3,8 @@ body{
     color: $font-color;
     font-size: $font-size-base;
     font-weight: $font-weight-light;
-    font-family: 'Montserrat', "Helvetica", Arial, sans-serif;
+    // font-family: 'Montserrat', "Helvetica", Arial, sans-serif;
+    font-family: 'Noto Sans KR','Montserrat', "Helvetica", Arial , sans-serif;
 }
 a{
   color: $info-color;
